--- a/Fundamentos de Programação para Internet/css/estilo.css
+++ b/Fundamentos de Programação para Internet/css/estilo.css
@@ -1,11 +1,24 @@
 body {
     background: #f5e8f4;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
     
 }
 
+h1 {
+
+    text-align: center;
+
+}
 body img {
     width: 500px;
     height: 313px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 #centro-distribuicao img{
@@ -21,10 +34,11 @@ body img {
 
 
 footer{
+
     display: grid;
-    justify-self: center;
     grid-template-columns: 1fr;
     gap: 20px;
+    text-align: center;
 
 }
 
